Fix image stretching in WhatsNewBlockFeature

--- a/components/WhatsNewBlock/_Feature/WhatsNewBlockFeature.module.scss
+++ b/components/WhatsNewBlock/_Feature/WhatsNewBlockFeature.module.scss
@@ -34,6 +34,7 @@
     flex-shrink: 1;
     width: 100%;
     display: flex;
+    align-self: flex-start;
 
     &_shadow {
       @include ld_shadow_noHover();
